# dakara-player

./: .appveyor.yml  .codecov.yml  .download_mpv.ps1  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  appveyor.yml  bump_version.sh  config.ini.example  config.yaml.example  create_archive.sh  dakara.py  dakara_server.py  kara.py  kara_player.py  loader.ass.default  local_settings_example.py  pyproject.toml  requierements.txt  requirements.txt  settings.py  setup.cfg  tests.py  transition.ass.default  transition_screen.py  transition_text_generator.py  vlc_player.py
.github/workflows/: ci.yml
dakara_player_vlc/: background_loader.py  daemon.py  dakara_manager.py  dakara_player_vlc.py  dakara_server.py  font_loader.py  resources_manager.py  safe_workers.py  tests.py  tests_daemon.py  tests_dakara_manager.py  tests_dakara_server.py  tests_font_loader.py  tests_resources_manager.py  tests_safe_workers.py  tests_text_generator.py  tests_vlc_player.py  text_generator.py  version.py  vlc_player.py
dakara_player_vlc/resources/: font-awesome.json
dakara_player_vlc/resources/templates/: idle.ass  transition.ass
dakara_player_vlc/resources/tests/: config.yaml
dakara_player_vlc/tests/: tests.py  tests_background_loader.py  tests_dakara_manager.py  tests_dakara_player_vlc.py  tests_dakara_server.py  tests_font_loader.py  tests_resources_manager.py  tests_safe_workers.py  tests_text_generator.py  tests_vlc_player.py
dakara_player_vlc/tests/resources/: idle.ass  song.ass  transition.ass
hooks/: pre-commit
hooks/pre-commit.d/: 01_tests
lib/: daemon.py  dakara_manager.py  dakara_player.py  dakara_player_vlc.py  dakara_server.py  font_loader.py  text_generator.py  transition_text_generator.py  vlc_player.py
share/: font-awesome.ini  idle.ass  test_screen.ass  tests_idle.txt  tests_transition.txt  transition.ass
src/dakara_player/: __init__.py  __main__.py  audio.py  background.py  background_loader.py  dakara_manager.py  dakara_player.py  dakara_server.py  font.py  font_loader.py  mac.py  manager.py  mpv_player.py  mrl.py  player.py  resources_manager.py  text.py  text_generator.py  user_resource_files.py  user_resources.py  version.py  vlc_player.py  web_client.py  window.py
src/dakara_player/commands/: play.py
src/dakara_player/media_player/: __init__.py  base.py  mpv.py  vlc.py
src/dakara_player/resources/: line-awesome.json  player.yaml
src/dakara_player/resources/templates/: idle.ass  transition.ass
src/dakara_player_vlc/: __init__.py  __main__.py  background_loader.py  dakara_manager.py  dakara_player_vlc.py  font_loader.py  media_player.py  mpv_player.py  resources_manager.py  state_manager.py  text_generator.py  version.py  vlc_helper.py  vlc_player.py
src/dakara_player_vlc/commands/: play.py
src/dakara_player_vlc/resources/: player_vlc.yaml
src/dakara_player_vlc/resources/templates/: idle.ass  mpv-transition.ass  transition.ass
tests/: test_background_loader.py  test_dakara_manager.py  test_dakara_player_vlc.py  test_font_loader.py  test_main.py  test_mpv_player.py  test_play.py  test_state_manager.py  test_text_generator.py  test_vlc_player.py  utils.py
tests/integration/: base.py  test_mac.py  test_media_player_mpv.py  test_media_player_vlc.py  test_mpv_player.py  test_vlc_player.py  test_window.py
tests/resources/: idle.ass  song2.ass  song2.mkv  song3.avi  transition.ass
tests/unit/: test_audio.py  test_background.py  test_background_loader.py  test_dakara_manager.py  test_dakara_player.py  test_dakara_player_vlc.py  test_dakara_server.py  test_font.py  test_font_loader.py  test_mac.py  test_main.py  test_manager.py  test_media_player_mpv.py  test_media_player_vlc.py  test_mpv_player.py  test_mrl.py  test_play.py  test_player.py  test_resources_manager.py  test_state_manager.py  test_text.py  test_text_generator.py  test_user_resource_files.py  test_user_resources.py  test_version.py  test_vlc_player.py  test_web_client.py  test_window.py
tools/: icon_map_generator.py
