[project]
name = "dakaraplayer"
authors = [
        {name = "Flore", email = "flore.love@gmail.com"},
        {name = "Neraste", email = "neraste.herr10@gmail.com"},
]
description = "Media player for the Dakara Project"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.8"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: OS Independent",
        "Environment :: X11 Applications",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: End Users/Desktop",
]
dependencies = [
        "Jinja2>=3.1.1,<3.2.0",
        "dakarabase>=1.4.2,<1.5.0",
        "filetype>=1.2.0,<1.3.0",
        "packaging>=21.3,<22.0",
        "path>=16.4.0,<16.5.0",
        "python-mpv-jsonipc>=1.1.13,<1.2.0",
        "python-vlc>=3.0.18121,<3.1.0,!=3.0.12117",
        "setuptools>=68",
]

[project.optional-dependencies]
dev = [
        "black>=22.10.0,<22.11.0",
        "codecov>=2.1.12,<2.2.0",
        "flake8>=5.0.4,<6.1.0",
        "func_timeout>=4.3.5,<4.4.0",
        "isort>=5.10.1,<5.11.0",
        "pdoc>=12.3.0,<12.4.0",
        "pre-commit>=2.20.0,<2.21.0",
        "pytest-cov>=4.0.0,<4.1.0",
        "pytest>=7.2.0,<7.3.0",
        "ruff>=0.3.0,<0.4.0",
]

[project.urls]
Homepage = "https://github.com/DakaraProject/dakara-player"
Repository = "https://github.com/DakaraProject/dakara-player.git"
Issues = "https://github.com/DakaraProject/dakara-player/issues"
Changelog = "https://github.com/DakaraProject/dakara-player/blob/master/CHANGELOG.md"

[project.scripts]
dakara-player = "dakara_player.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dakara_player.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
addopts = "--cov=dakara_player"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []
