[project]
name = "dakaraplayer"
authors = [
        {name = "Neraste", email = "neraste.herr10@gmail.com"},
]
description = "Media player for the Dakara Project"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.9"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Operating System :: OS Independent",
        "Environment :: X11 Applications",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: End Users/Desktop",
]
dependencies = [
        "Jinja2>=3.1.1,<3.2.0",
        "dakarabase>=2.1.0,<2.2.0",
        "filetype>=1.2.0,<1.3.0",
        "packaging>=24.2,<25.0",
        "python-mpv-jsonipc>=1.2.0,<1.3.0",
        "python-vlc>=3.0.21203,<3.1.0,!=3.0.12117",
]
# note: update .pre-commit-config.yaml as well

[project.optional-dependencies]
dev = [
        "black>=25.1.0,<25.2.0",
        "codecov>=2.1.13,<2.2.0",
        "func_timeout>=4.3.5,<4.4.0",
        "isort>=6.0.0,<6.1.0",
        "pdoc>=15.0.1,<15.1.0",
        "pre-commit>=4.1.0,<4.2.0",
        "pytest-cov>=6.0.0,<6.1.0",
        "pytest>=8.3.4,<8.4.0",
        "ruff>=0.9.6,<0.10.0",
]

[project.urls]
Homepage = "https://github.com/DakaraProject/dakara-player"
Repository = "https://github.com/DakaraProject/dakara-player.git"
Issues = "https://github.com/DakaraProject/dakara-player/issues"
Changelog = "https://github.com/DakaraProject/dakara-player/blob/master/CHANGELOG.md"

[project.scripts]
dakara-player = "dakara_player.__main__:main"

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dakara_player.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
addopts = "--cov=dakara_player"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = []
