[metadata]
name = dakaraplayer
version = 1.8.0-dev
author = Flore <flore.love@gmail.com>, Neraste <neraste.herr10@gmail.com>
description = Media player for the Dakara Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/DakaraProject/dakara-player
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-player/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Operating System :: OS Independent
        Environment :: X11 Applications
        Environment :: Win32 (MS Windows)
        Intended Audience :: End Users/Desktop

[options]
package_dir =
        =src
packages = find:
# dependencies are pinned by interval
install_requires =
        dakarabase>=1.3.0,<1.4.0
        filetype>=1.0.7,<1.1.0
        importlib-resources>=5.0.0,<6.0.0; python_version < '3.7'
        Jinja2>=2.10.1,<2.11.0
        packaging>=20.4,<21
        python-mpv-jsonipc>=1.1.10,<1.2.0
        python-vlc>=3.0.11115,<3.1.0,!=3.0.12117
include_package_data = true

[options.extras_require]
tests =
        black>=21.8b0,<22.0
        codecov>=2.1.9,<2.2.0
        flake8>=3.8.3,<3.9.0
        func_timeout>=4.3.5,<4.4.0
        isort>=5.9.3,<5.10.0
        pre-commit>=2.15.0,<2.16.0
        pytest-cov>=2.12.1,<2.13.0
        pytest>=6.2.3,<6.3.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dakara-player = dakara_player.__main__:main

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = --cov=dakara_player

[isort]
profile = black
