[metadata]
name = dakaraplayer
version = attr:dakara_player.version.__version__
author = Flore <flore.love@gmail.com>, Neraste <neraste.herr10@gmail.com>
description = Media player for the Dakara Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/DakaraProject/dakara-player
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-player/issues
classifiers =
        License :: OSI Approved :: MIT License
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Operating System :: OS Independent
        Environment :: X11 Applications
        Environment :: MacOS X
        Environment :: Win32 (MS Windows)
        Intended Audience :: End Users/Desktop

[options]
package_dir =
        =src
packages = find:
# dependencies are pinned by interval
install_requires =
        dakarabase>=1.4.0,<1.5.0
        filetype>=1.0.10,<1.1.0
        importlib-resources>=5.6.0,<5.7.0; python_version < '3.7'
        Jinja2>=3.1.1,<3.2.0
        packaging>=21.3,<22.0
        python-mpv-jsonipc>=1.1.13,<1.2.0
        python-vlc>=3.0.16120,<3.1.0,!=3.0.12117
include_package_data = true

[options.extras_require]
tests =
        black>=22.3.0,<22.4.0
        codecov>=2.1.12,<2.2.0
        flake8>=4.0.1,<4.1.0
        func_timeout>=4.3.5,<4.4.0
        isort>=5.10.1,<5.11.0
        pdoc>=10.0.4,<10.1.0
        pre-commit>=2.17.0,<2.18.0
        pytest-cov>=3.0.0,<3.1.0
        pytest>=7.1.1,<7.2.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        dakara-player = dakara_player.__main__:main

[flake8]
max-line-length = 88
ignore = E203, W503

[tool:pytest]
addopts = --cov=dakara_player

[isort]
profile = black
